Added checkout step

--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -8,6 +8,9 @@ jobs:
         steps:
         - name: Welcome message
           run: echo 'My first actions'
+        
+        - name: Checkout Repo
+          uses: actions/checkout@4
 
         - name: List Files
           run: ls
