--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -12,10 +12,12 @@ jobs:
         - name: Checkout Repo
           uses: actions/checkout@v4
 
-        - name: List Files
-          run: ls
+        - name: List Files and read file
+          run: |
+             ls -ltra
+             cat README.md
 
-        - name: Read file
-          run: cat README.md
+        # - name: Read file
+        #   run: cat README.md
 
 
