generate ASCII art

--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -17,6 +17,9 @@ jobs:
              ls -ltra
              cat README.md
 
+        - name: Generate ASCII Artwork
+          run: cowsay -f dragon "Run for cover, I am a DRAGON....ARAWWW, THUSS THUSS" >> dragon.txt
+
         # - name: Read file
         #   run: cat README.md
 
