--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -14,7 +14,7 @@ jobs:
         
         - name: Generate ASCII Artwork
           run: |
-             chmod +x ascii-script.sh
+             chmod +x ./ascii-script.sh
              ./ascii-script.sh
 
         - name: List Files and read file
