--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -15,6 +15,7 @@ jobs:
           run: sleep 30
     
    test-job:
+    needs: build-job
     runs-on: ubuntu-latest
     steps:
         - name: Sleep for 10 seconds
@@ -24,6 +25,7 @@ jobs:
           run: grep -i "dragon" dragon.txt
 
    deploy_job:
+        needs: build-job
         runs-on: ubuntu-latest
         steps:
             - name: Read file
