small change to sequence of jobs

--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -25,7 +25,7 @@ jobs:
           run: grep -i "dragon" dragon.txt
 
    deploy_job:
-        needs: build-job
+        needs: test-job
         runs-on: ubuntu-latest
         steps:
             - name: Read file
