corrected library name

--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: Install Cowsay Program
-          run: sudo apt-get install cowboy -y
+          run: sudo apt-get install cowsay -y
 
         - name: Execute Cowsay CMD
           run: cowsay -f dragon "Run for cover, I feel a sneeze coming on." >> dragon.txt
