--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -17,20 +17,20 @@ jobs:
             name: dragon-file
             path: dragon.txt 
     
-   test-job:
-    needs: build-job
-    runs-on: ubuntu-latest
-    steps:
-        - name: Download the artifact
-          uses: actions/download-artifact@v4
-          with: 
-            name: dragon-file
+#    test-job:
+#     needs: build-job
+#     runs-on: ubuntu-latest
+#     steps:
+#         - name: Download the artifact
+#           uses: actions/download-artifact@v4
+#           with: 
+#             name: dragon-file
 
-        - name: Test file Exist
-          run: grep -i "dragon" dragon.txt
+#         - name: Test file Exist
+#           run: grep -i "dragon" dragon.txt
 
    deploy_job:
-        needs: test-job
+        needs: build-job
         runs-on: ubuntu-latest
         steps:
             - name: Download the artifact
